--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="type" content="Vedant Daigavane's portfolio">
     <!-- Page FavIcon -->
     <link
-      href="./icon.png"
+      href="./favicon.ico"
       rel="shortcut icon "
       type="image/vnd.microsoft.icon"
     />
