--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>Vedant Daigavane | Portfolio</title>
-    <meta title="description" content="Vedant Daigavane, Full Stack Developer from India." />
+    <meta title="description" content="Vedant Daigavane, Full Stack Developer from India, working as an SDE1 at Upstox" />
     <meta name="type" content="Vedant Daigavane's portfolio" />
     <!-- Page FavIcon -->
     <link href="./favicon.ico" rel="shortcut icon " type="image/vnd.microsoft.icon" />
